--- a/earth-dropdown-trigger.html
+++ b/earth-dropdown-trigger.html
@@ -11,7 +11,7 @@
     <template>
         <style>
             :host {
-                display: inline-block;
+                display:block;
             }
 
             :host ::slotted([slot=dropdown-content]){
@@ -21,6 +21,10 @@
                 line-height: 20px;
                 border-radius: 3px;
                 box-shadow: 0px 2px 6px #ccc;
+            }
+
+            iron-dropdown {
+                z-index: 42;
             }
         </style>
 
