--- a/earth-cruddy.html
+++ b/earth-cruddy.html
@@ -349,7 +349,6 @@ Custom property                          | Description                  | Defaul
             // --- Layout Apis
             // --- ---------------------------
             resetLayout() {
-                console.log('Rest layout');
                 this.$.headerLayout.resetLayout();
             }
 
@@ -365,7 +364,7 @@ Custom property                          | Description                  | Defaul
             }
 
             _handleRequestResponse(e) {
-                console.log('--- Handle cruddy response', e);
+//                console.log('--- Handle cruddy response', e);
                 const detail = e.detail;
                 this._handleStatusEffects(detail.info);
             }
@@ -427,8 +426,8 @@ Custom property                          | Description                  | Defaul
 
             _getAirCrudyNodes(funcName) {
                 if (!this._cruddyElements) {
-                   console.log('_getAirCrudyNodes : content= ', this.$.content);
-                   console.log('_getAirCrudyNodes : this.shadowRoot.querySelector content= ', this.shadowRoot.querySelector('#content'));
+//                   console.log('_getAirCrudyNodes : content= ', this.$.content);
+//                   console.log('_getAirCrudyNodes : this.shadowRoot.querySelector content= ', this.shadowRoot.querySelector('#content'));
                     this.logDebug('_getAirCrudyNodes : ', this.$.content);
                     const contentNode = this.$.content ||  this.shadowRoot.querySelector('#content');
                     const crudies = this._computeFilterNodes(contentNode, (node) => {
