--- a/demo/dialog.html
+++ b/demo/dialog.html
@@ -19,6 +19,8 @@
 
     <link rel="import" href="../../air-cruddy/air-cruddy-elasticsearch.html">
 
+    <link rel="import" href="sample-content.html">
+
     <custom-style>
         <style is="custom-style" include="demo-pages-shared-styles">
             paper-dialog {
