--- a/earth-cruddy.html
+++ b/earth-cruddy.html
@@ -74,7 +74,7 @@ Custom property                          | Description                  | Defaul
             }
 
             app-header {
-                background-color: #0b8043;
+                background-color: var(--earth-layout-header-background-scroll-color, var(--earth-layout-header-background-color, var(--primary-color));
                 color: var(--earth-layout-header-text-color, var(--dark-theme-text-color));
                 --app-header-background-front-layer: {
                     background-color: var(--earth-layout-header-background-color, var(--primary-color));
