--- a/earth-cruddy.html
+++ b/earth-cruddy.html
@@ -75,7 +75,7 @@ Custom property                                 | Description                  |
             }
 
             app-header {
-                background-color: var(--earth-layout-header-background-scroll-color, var(--earth-layout-header-background-color, var(--primary-color));
+                background-color: var(--earth-layout-header-background-scroll-color, var(--earth-layout-header-background-color, var(--primary-color)));
                 color: var(--earth-layout-header-text-color, var(--dark-theme-text-color));
                 --app-header-background-front-layer: {
                     background-color: var(--earth-layout-header-background-color, var(--primary-color));
