--- a/earth-dropdown-trigger.html
+++ b/earth-dropdown-trigger.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer-element.html">
 
 <!-- Ensure Web Animations polyfill is loaded since neon-animation 2.0 doesn't import it -->
-<link rel="import" href="../neon-animation/web-animations.html">
+<!--<link rel="import" href="../neon-animation/web-animations.html">-->
 
 <link rel="import" href="../iron-dropdown/iron-dropdown.html">
 <link rel="import" href="../paper-styles/paper-styles.html">
