--- a/earth-cruddy.html
+++ b/earth-cruddy.html
@@ -438,7 +438,12 @@ Custom property                                 | Description                  |
 
             // --- Layout Api
             // --- ---------------------------
-
+            /**
+             * Clear the Web Components
+             */
+            clean() {
+                this.clearCacheCruddyElements();
+            }
             /**
              * Clear the cache of Cruddy Elements
              */
