Toast in container

--- a/earth-cruddy.html
+++ b/earth-cruddy.html
@@ -409,10 +409,12 @@ Custom property                                 | Description                  |
             // --- ---------------------------
 
             openToastUndoReset() {
+                this.$.toastUndoReset.fitInto = this.$.headerLayout;
                 this.$.toastUndoReset.open();
             }
 
             openToastSaveOrDismiss() {
+                this.$.toastSaveOrDismiss.fitInto = this.$.headerLayout;
                 this.$.toastSaveOrDismiss.open();
             }
 
